--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,9 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+#Ignore images from paperclip
+/public/system
+
+#Ignore configs
+/config/*.yml
